[project]
name = "doc-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.10",
    "fastembed>=0.7.0",
    "gpt4all>=2.8.2",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-groq>=0.3.2",
    "langchain-nomic>=0.1.4",
    "langchain-openai>=0.3.18",
    "langchainhub>=0.1.21",
    "langgraph>=0.4.5",
    "tavily-python>=0.7.2",
    "tiktoken>=0.9.0",
]
